--- a/scss/bs-custom.scss
+++ b/scss/bs-custom.scss
@@ -1,5 +1,5 @@
 // Your variable overrides
-$body-bg: #000;
+$body-bg: #6495ED;
 $body-color: #fff;
 // Bootstrap and its default variables
 @import "../node_modules/bootstrap/scss/bootstrap";
